@@ -1,9 +1,11 @@
 package com.capgemini.hackyeah.point.service;
 
 
+import com.capgemini.hackyeah.domain.model.Role;
 import com.capgemini.hackyeah.domain.model.User;
 import com.capgemini.hackyeah.domain.model.point.Point;
 import com.capgemini.hackyeah.domain.repository.UserRepository;
+import com.capgemini.hackyeah.point.dto.LeaderDto;
 import com.capgemini.hackyeah.point.repository.PointRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -45,8 +47,9 @@ public class PointService {
 
     }
 
-    public List<String> getAllLeadersForBoard() {
-        return userRepository.findAllByOrderByTotalPointsAsc().stream()
-                .map(User::getEmail).collect(Collectors.toList());
+    public List<LeaderDto> getAllLeadersForBoard() {
+        List<User> userPoints= userRepository.findAllByOrderByTotalPointsDesc().stream().filter(user -> user.getRole().equals(Role.USER)).toList();
+
+        return userPoints.stream().map(user -> LeaderDto.builder().firstname(user.getFirstname()).lastname(user.getLastname()).points(user.getTotalPoints()).build()).toList();
     }
 }
